Added line functionality. Now you can click and draw a line. Added line.js file.

--- a/TeamMeatProject/PorkPaint/PorkPaint.csproj
+++ b/TeamMeatProject/PorkPaint/PorkPaint.csproj
@@ -67,6 +67,7 @@
     <Content Include="scripts\engine.js" />
     <Content Include="scripts\shapes\circle.js" />
     <Content Include="scripts\shapes\line.js" />
+    <Content Include="scripts\shapes\point.js" />
     <Content Include="scripts\shapes\rectangle.js" />
     <Content Include="scripts\shapes\triangle.js" />
     <Content Include="scripts\toolbox.js" />
