Experimenting with background vision

--- a/TeamMeatProject/PorkPaint/PorkPaint.csproj
+++ b/TeamMeatProject/PorkPaint/PorkPaint.csproj
@@ -59,7 +59,9 @@
   <ItemGroup>
     <Content Include="images\fork-me-on-github.png" />
     <Content Include="images\background-sandpaper.png" />
+    <Content Include="images\geometry2.png" />
     <Content Include="images\paper-big.png" />
+    <Content Include="images\paper.png" />
     <Content Include="index.html" />
     <Content Include="intro.html" />
     <Content Include="lib\kinetic-v5.1.0.js" />
