New class linedrawer
new class linedrawer for lines and pencil and line making tools

--- a/TeamMeatProject/PorkPaint/PorkPaint.csproj
+++ b/TeamMeatProject/PorkPaint/PorkPaint.csproj
@@ -75,6 +75,8 @@
     <Content Include="scripts\shapes\circle.js" />
     <Content Include="scripts\creatingControls.js" />
     <Content Include="scripts\shapes\line.js" />
+    <Content Include="scripts\shapes\linedrawer.js" />
+    <Content Include="scripts\shapes\pencil.js" />
     <Content Include="scripts\shapes\point.js" />
     <Content Include="scripts\shapes\rectangle.js" />
     <Content Include="scripts\shapes\isoscelesTriangle.js" />
